[package]
name = "sc-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "1.3.2", optional = true }
csv-async = "1.2.4"
ethers = "0.17.0"
futures = "0.3.24"
reqwest = { version = "0.11.11", features = ["stream"], optional = true }
serde = { version = "1.0.144", features = ["derive"] }
serde_cbor = { version = "0.11.2", optional = true }
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["sync"] }
tokio-tungstenite = { version = "0.17.2", optional = true }
tungstenite = { version = "0.17.2", optional = true }
url = { version = "2.3.1", optional = true }

[dev-dependencies]
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }

[features]
http = ["reqwest", "url"]
ws = ["bitflags", "serde_cbor", "tokio-tungstenite", "tungstenite"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
