[package]
name = "superchain-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "1.3.2" }
csv-async = "1.2.4"
ethers = "0.17.0"
futures = "0.3.24"
reqwest = { version = "0.11.11", features = ["stream"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_cbor = { version = "0.11.2" }
serde_repr = "0.1.9"
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["macros", "sync"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
tungstenite = { version = "0.17.2" }
url = { version = "2.3.1" }
dotenv = "0.15.0"
base64 = "0.13.0"

[dev-dependencies]
tokio = { version = "1.21.1", features = ["rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
